--- a/notebooks/bike_analysis_biketeam_final_project[874].Rmd
+++ b/notebooks/bike_analysis_biketeam_final_project[874].Rmd
@@ -15,7 +15,7 @@ The other teams that are working on this project include the demographic team, t
 
 Load packages:
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(tidyverse)
 library(janitor)
 library(readxl)
@@ -44,7 +44,7 @@ Read the data:
 
 We read the original .csv file and add in the variables new variables 'duration_min', 'hour_of_day', and 'day of week' with mutate.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 dfa = read_csv("../data_raw/201808-capitalbikeshare-tripdata.csv") %>%
   clean_names()
 ```
@@ -55,11 +55,11 @@ We summarize that dataframe to identify data types, missing data, et cetera.
 skim(dfa)
 ```
 
-Upon comparing the two datasets we recognize that there are differences in the columns between the two. One important discrepency is the lack of longitude and latitude positions within the 2018 dataset. We attempted to use the `tidygeocoder` package to get the latitudes and longitudes however attempting that produced N/As owing to the fact that the addresses were not formatted appropriately for the package. 
+Upon comparing the two datasets we recognize that there are differences in the columns between the two. One important discrepancy is the lack of longitude and latitude positions within the 2018 dataset. We attempted to use the `tidygeocoder` package to get the latitudes and longitudes however attempting that produced N/As owing to the fact that the addresses were not formatted appropriately for the package. 
 
 As such we decided to use the 2020 dataset to map the addresses found in that dataset to the 2018 dataset. 
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 dfcoord = read_csv("../data_raw/202008-capitalbikeshare-tripdata.csv") %>%
   clean_names()
 
@@ -69,7 +69,7 @@ dfa$start_lng <- dfcoord$start_lng[match(dfa$start_station, dfcoord$start_statio
 dfa$end_lat <- dfcoord$end_lat[match(dfa$end_station, dfcoord$end_station_name)]
 dfa$end_lng <- dfcoord$end_lng[match(dfa$end_station, dfcoord$end_station_name)]
 ```
-We observed from compating the 2020 data with the 2018 is that the 2018 data has approximately 150,000 more observations. We infer the reasoning behind this is due to the impact that Covid-19 had on this company rather than a lack of interest in ridership, in general.
+We observed from comparing the 2020 data with the 2018 is that the 2018 data has approximately 150,000 more observations. We infer the reasoning behind this is due to the impact that Covid-19 had on this company rather than a lack of interest in ridership, in general.
 
 
 ## Cleaning
@@ -77,6 +77,7 @@ We observed from compating the 2020 data with the 2018 is that the 2018 data has
 Now we need to clean the data by removing the incomplete, incorrect, and irrelevant data from the dataframe. One part of the data that was incomplete was for the instances where the addresses did not match up, which left the longitude and latitude values as 'NA'. Another thing we should correct is the end dates that extend into September.
 
 ```{r}
+
 dfb = dfa %>%
   filter(!is.na(start_lat),
          !is.na(end_lat),
@@ -89,11 +90,12 @@ This ends up being about 47,000 observations (or a little under 12%) that we wil
 
 ## Data Manipulation And Visualization
 
-If our main goal in this analysis is to increase ridership within census tracts, we need to first determine what ridership actually means. As a team we decided that we should use the amount of time measured in duration of ride (in minutes). 
+If our main goal in this analysis is to increase ridership within census tracts, we need to first determine what ridership actually means. As a team we decided that the amount of time measured in duration of ride (in minutes). 
 
 We made the decision to measure ridership in terms of the `start_station`. Upon calculation, we found that the median distance between a `start_station` and `end_station` is approximately 1.5 km (1 mile). As such, it is likely that the variables that we are considering have limited effect at such short distances.  
 
 ```{r}
+
 haversine <- function(long1, lat1, long2, lat2, round = 3) {
   # convert to radians
   long1 = long1 * pi / 180
@@ -108,6 +110,10 @@ haversine <- function(long1, lat1, long2, lat2, round = 3) {
   
   return( round(d,round) ) # distance in km
 }
+
+median((dfb %>% mutate(dist = haversine(start_lng, start_lat, end_lng, end_lat)))$dist)
+
+
 ```
 
 We created a `duration` column which measures the total duration of the ridership (in minutes). Before we group, total duration within each census tract, we first determine the total ridership for each `start_station`. This is done for the period of the entire month. We thought that given the fact that census, crime, and other forms of data are unlikely to be collected at a frequent basis, we thought that each observation would have to be for a given census tract rather than some combination of census tract and time. 
@@ -117,6 +123,7 @@ We created a `duration` column which measures the total duration of the ridershi
 dfc = dfb %>% mutate(duration = as.numeric(end_date - start_date)) %>% 
   group_by(start_station) %>% mutate(tot_dur = sum(duration)) %>%
   select(start_station, start_lat, start_lng, tot_dur) %>% distinct(start_station, .keep_all = TRUE)
+
 ```
 
 
@@ -131,7 +138,7 @@ census_sf =  st_read(shp_path) %>% clean_names()
 ```
 
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 tmap_mode("view")
 tm_shape(census_sf)+tm_polygons(alpha=.3)
 ```
@@ -155,12 +162,12 @@ tm_shape(bikes_sf)+tm_dots(size=.01,alpha=.8)+
 
 
 
-### Statial Join
+### Spatial Join
 
 
 Since we have both the census tract data and the bikeshare data, we can leftjoin the bikeshare with census tract.
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 dfj=st_join(bikes_sf,census_sf,join=st_within)
 
 dfj1 =st_join(census_sf,bikes_sf,join=st_contains)
@@ -169,6 +176,17 @@ dfj2 %>% tm_shape()  +tm_polygons("n",alpha=.6)+
   tm_basemap( leaflet::providers$OpenStreetMap )
 
 ```
+
+We can also create a similar heat map for the total duration/ridership within each census tract. 
+
+```{r warning=FALSE, message=FALSE}
+dfj3 = dfj1 %>% replace(., is.na(.), 0)
+
+dfj3 %>% tm_shape() + tm_polygons("tot_dur", alpha=0.6) + 
+  tm_basemap(leaflet::providers$OpenStreetMap)
+```
+
+There appear to be a few outliers that have more or less total duration than the rest of DC. In particular, there appears to be more usage closer to the middle of DC and less at around the edges. 
 
 Using the merged census tract and bikeshare data we can create a single dataframe containing the following information:
  * census tract
@@ -200,7 +218,8 @@ bike_final = bike_final %>% right_join(census_df, by = "name") %>% replace_na(li
 
 Out of curiosity, we decided to create a scatterplot of the ridership against the number of bike stations in a tract to see if there is a linear relationship between the two or if there are external factors contributing to the ridership within the census tracts 
 
-```{r}
+```{r warning=FALSE, message=FALSE}
+
 bike_final %>% ggplot(mapping = aes(x=num_stations, y=ridership)) + geom_point() + geom_smooth()
 ```
 
